meecast (0.4.9) unstable; urgency=low

  * Fixed problem with lockscreen widget and wallpaper image with various dpi 
  * Fixed problem with temperature in Farenheit unit and autoupdating
  * Updated Germany, Polish, Swedish translations

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 10 Feb 2011 16:42:23 +0200

meecast (0.4.8) unstable; urgency=low

  * Added stations in yr.no database (Mexico, Netherland, Bulgaria)
  * Added stations in gismeteo.ru database (Bulgaria)
  * Added LockScreen widget
  * Decreased size of image files. Thanks Wolfgang Fürst
  * Updated Russian, Finland translations
  * Small improvement in hours view 

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 10 Feb 2011 16:42:23 +0200

meecast (0.4.7) unstable; urgency=low

  * Fixed problem with new stations in sources yr.no and gismeteo.ru 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Jan 2011 18:42:23 +0200

meecast (0.4.6) unstable; urgency=low

  * Added autoupdating function
  * Updated Swedish, Finish and Russian translations
  * Added trimming of whitespace in Search Field 
  * Search Field has been made case-insensitive 
  * Added hours forecast for source weather.com

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 11 Jan 2011 22:42:23 +0200

meecast (0.4.5) unstable; urgency=low

  * Changed date format in main window
  * Added pressure units settings 
  * Added Swedish translation. Thanks Angela Nennebrandt and Tomislav
    Veleckovik 
  * Fixed Bug #12480 - Title in info screen should be translatable 
  * Changed algorithm for day/night time
  * Updated Polish, Spain and Germany translations

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Dec 2011 23:42:23 +0200

meecast (0.4.4) unstable; urgency=low

  * Added possibility to install events applet using MeeCast
  * Fixed problem with autoupdating in events applet
  * Fixed segmentation fault with nill GPS station 
  * Fixed wrong wind speed values in yr.no and gismeteo.ru
  * Small improvements in external view
  * Added stations in yr.no database (China)