@@ -4,7 +4,7 @@
 <logo>gismeteo.ru.png</logo>
 <base>gismeteo.ru.db</base>
 <forecast url="http://www.gismeteo.by/city/weekly/%s/" />
-<detail url="http://gismeteo.ru/city/hourly/%s/" />
+<detail url="http://www.gismeteo.by/city/hourly/%s/" />
 <search url="http://xoap.weather.com/search/search?where=%s" />
 <binary>/opt/com.meecast.omweather/lib/gismeteoru</binary>
 <showurl url="http://www.gismeteo.by/city/daily/%s/" />
