@@ -3,6 +3,7 @@ meecast (0.4.9) unstable; urgency=low
   * Fixed problem with lockscreen widget and wallpaper image with various dpi 
   * Fixed problem with temperature in Farenheit unit and autoupdating
   * Updated Germany, Polish, Swedish translations
+  * Added hours forecast for source gismeteo.ru
 
  -- Vlad Vasiliev <vlad@gas.by>  Fri, 10 Feb 2011 16:42:23 +0200
 
